<resources>
    <string name="app_name">TODOApp</string>
    <string name="action_settings">Settings</string>
    <string name="action_tags">Manage tags</string>

    <!-- Strings related to edit tags -->
    <string name="title_activity_tags">Edit tags</string>


    <!-- Strings related to Stats -->
    <string name="action_analytics">Stats</string>
    <string name="daily_stats">Daily report</string>
    <string name="total_stats">Total relative stats </string>
    <string name="total_stats_bar">Total tasks</string>
    <string name="tags_stats_bar">Percentage tasks assigned to tag </string>
    <string name="title_activity_settings">Settings</string>
    <string name="relative_tags_chart_title">Percentage of tasks completed by tag</string>

    <!-- Strings related to Settings -->

    <!-- Strings for Settings~General -->
    <string name="pref_header_general">General information</string>

    <string name="about_author">Author</string>
    <string name="about_author_name">Fernando Collado</string>
    <string name="about_contact">Contact</string>
    <string name="about_contact_mail">devforfer@gmail.com</string>
    <string name="about_license">License</string>
    <string name="about_license_license">MIT</string>
    <string name="about_source_code">Source code</string>
    <string name="about_github">Visit: github.com/ForFer/TODOApp</string>

    <!-- Strings for Settings~Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="switch_notif_1">Night notification</string>
    <string name="switch_notif_2">Evening notification</string>

</resources>
