<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:paddingBottom="30dp"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stats_relative_layout"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="@string/action_analytics"
                android:padding="10dp"
                android:id="@+id/stats_title"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/daily_stats"
                android:layout_below="@+id/stats_title"
                android:id="@+id/daily_stats_title"
                />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/daily_stats_chart"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_below="@+id/daily_stats_title"
                android:layout_marginBottom="30dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/total_stats"
                android:layout_below="@+id/daily_stats_chart"
                android:id="@+id/total_stats_title"
                />
            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/total_stats_pie"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_marginBottom="30dp"
                android:layout_below="@+id/total_stats_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/total_stats_bar"
                android:layout_below="@+id/total_stats_pie"
                android:id="@+id/total_stats_bar_title"
                />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/total_bar_chart"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:minHeight="300dp"
                android:layout_marginBottom="20dp"
                android:layout_below="@id/total_stats_bar_title"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/tags_stats_bar"
                android:layout_below="@+id/total_bar_chart"
                android:id="@+id/tags_chart_title"
                />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/tag_bar_chart"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:minHeight="300dp"
                android:layout_marginBottom="20dp"
                android:layout_below="@id/tags_chart_title"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/relative_tags_chart_title"
                android:layout_below="@+id/tag_bar_chart"
                android:id="@+id/relative_tags_chart_title"
                />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/relative_tag_bar_chart"
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:minHeight="300dp"
                android:layout_marginBottom="20dp"
                android:layout_below="@id/relative_tags_chart_title"
                />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>